--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 h1, h2, h3 {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Source Code Pro', sans-serif;
   font-weight: 300;
 }
 
@@ -66,6 +66,10 @@ header h1 {
   position: relative;
   top: 370px;
   font-weight: 700;
+  color: black;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
 
 header p {
